--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,7 +40,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="35dp"
         android:layout_marginBottom="50dp"
         android:gravity="center"
         android:text="@string/welcome"
@@ -115,11 +115,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/register_text"
-        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:background="@drawable/button_rounded"
-        app:backgroundTint="@color/main_green"
+        android:backgroundTint="@color/main_green"
         />
     <TextView
         android:id="@+id/login_text"
