--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="main_green">#4BC355</color>
     <color name="grey">#CCCCCC</color>
+    <color name="red">#FF0000</color>
 </resources>
