--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button_to_split_bill"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Split Bill"
+        android:layout_centerInParent="true"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
