--- a/app/src/main/res/layout/activity_split_bill.xml
+++ b/app/src/main/res/layout/activity_split_bill.xml
@@ -11,6 +11,7 @@
         android:scaleType="centerCrop"
         android:layout_centerInParent="true"/>
 
+
     <Button
         android:id="@+id/button_capture"
         android:layout_width="wrap_content"
@@ -28,6 +29,13 @@
         android:layout_below="@+id/button_capture"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
+
+
+    <Button
+        android:id="@+id/button_select_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select from Gallery" />
 
 
 </RelativeLayout>
