--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -12,7 +12,7 @@
         android:id="@+id/header_title"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/red"
+        android:background="@color/white"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -72,7 +72,7 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10 May 2022"
+
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="4dp" />
@@ -81,7 +81,7 @@
                 android:id="@+id/transaction_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Expense Transaction"
+
                 android:textSize="16sp"
                 android:textColor="@android:color/darker_gray"
                 android:layout_marginBottom="8dp" />
@@ -99,7 +99,7 @@
                 android:text="Rp. 100.000.0"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/red" />
+                android:textColor="@color/white" />
         </LinearLayout>
     </FrameLayout>
 
@@ -124,7 +124,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Insert Title Here"
+
             android:textSize="20sp"
             android:layout_marginBottom="4dp" />
 
@@ -132,7 +132,7 @@
             android:id="@+id/transaction_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Insert Category Here"
+
             android:textSize="20sp"
             android:layout_marginBottom="4dp" />
 
@@ -145,7 +145,7 @@
             android:id="@+id/note"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Insert Note here"
+
             android:textSize="20sp"
             android:layout_marginBottom="4dp" />
 
