--- a/app/src/main/res/layout/transaction_item_recycler.xml
+++ b/app/src/main/res/layout/transaction_item_recycler.xml
@@ -1,22 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
     android:background="@drawable/grey_border"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    android:paddingStart="0dp"
+    android:paddingTop="0dp"
+    android:paddingBottom="0dp">
 
     <!-- Color indicator bar -->
     <View
         android:id="@+id/color_indicator"
-        android:layout_width="5dp"
+        android:layout_width="12dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="8dp"
+        android:background="@drawable/color_indicator_shape"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/content_wrapper"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/color_indicator"
+        app:layout_constraintEnd_toEndOf="parent">
 
     <!-- Category TextView -->
     <TextView
@@ -25,7 +39,7 @@
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintStart_toEndOf="@id/color_indicator"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Business" />
 
@@ -36,10 +50,9 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:layout_marginBottom="8dp"
-
-        app:layout_constraintStart_toEndOf="@id/color_indicator"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_category"
-        app:layout_constraintEnd_toStartOf="@id/text_amount"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:text="Food Sales" />
 
     <!-- Amount TextView -->
@@ -59,8 +72,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@id/color_indicator"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_title"
         tools:text="10/06/2022" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
