--- a/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/app/src/main/res/layout/fragment_transaction_history.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,47 +9,48 @@
     android:paddingEnd="16dp"
     android:paddingStart="16dp">
 
-
-    <ImageButton
-        android:id="@+id/button_add_wallet"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@drawable/ic_add"
-        android:contentDescription="Add"
-        android:background="?attr/selectableItemBackground"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_wallets"
+    <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_wallets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            tools:listitem="@layout/wallet_recycler"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/text_date_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recyclerView_wallets"
+            android:layout_marginTop="16dp"
+            android:text="Today" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_transactions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            tools:listitem="@layout/transaction_item_recycler"
+            android:layout_below="@id/text_date_header"
+            android:layout_marginTop="16dp" />
+    </RelativeLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddCLickablet"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        tools:listitem="@layout/wallet_recycler"
-        android:layout_marginBottom="8dp"
-        android:orientation="horizontal"
-        android:layout_below="@id/button_add_wallet"
-    android:layout_marginTop="16dp" />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:contentDescription="add receipt"
+        app:srcCompat="@drawable/ic_add"
+        android:tint="@android:color/white" />
 
-    <TextView
-        android:id="@+id/text_date_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recyclerView_wallets"
-        android:layout_marginTop="16dp"
-        android:text="Today"
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_transactions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        tools:listitem="@layout/transaction_item_recycler"
-        android:layout_below="@id/text_date_header"
-    android:layout_marginTop="16dp" />
-
-</RelativeLayout>
