--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -18,7 +18,7 @@
         android:title="Receipts"/>
     <item
         android:id="@+id/profileFragment"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_statistics"
         app:itemIconTint="@color/light_green2"
-        android:title="Profile" />
+        android:title="Statisctics" />
 </menu>
