--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -1,84 +1,82 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".addCategory"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/categoryList"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/create_a_new_wallet"
+    <!-- Toggle Buttons -->
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/toggle_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp"
+        android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:gravity="center"
-        android:text="Create a new Category"
-        android:textStyle="bold"
-        android:textSize="24sp" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <TextView
-        android:id="@+id/category_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="start"
-        app:layout_constraintTop_toBottomOf="@id/create_a_new_wallet"
-        android:layout_marginTop="30dp"
-        android:text="Choose Category"
-        android:textSize="16sp" />
+        <Button
+            android:id="@+id/income_toggle_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Income"
+            android:textStyle="bold"
+            android:background="@drawable/toggle_unselected" />
 
-    <Spinner
-        android:id="@+id/spinner_categories"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:spinnerMode="dropdown"
-        android:minHeight="54dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/category_text"
-        android:background="@drawable/edit_text_rounded1"/>
+        <Button
+            android:id="@+id/expense_toggle_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Expense"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/toggle_unselected" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <TextView
-        android:id="@+id/wallet_name_input_box"
+    <!-- RecyclerView for Categories -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/category_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spinner_categories"
-        android:text="Category Name"
-        android:textSize="16sp"/>
-
-    <EditText
-        android:id="@+id/wallet_name_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:autofillHints="emailAddress"
-        android:hint="Enter category name"
-        android:textSize="16sp"
-        android:inputType="textEmailAddress"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_category"
+        app:layout_constraintTop_toBottomOf="@id/toggle_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/add_button"
         android:padding="8dp"
-        android:minHeight="54dp"
-        android:background="@drawable/edit_text_rounded1"
-        app:layout_constraintTop_toBottomOf="@id/wallet_name_input_box"
-        />
+        android:scrollbars="vertical"/>
 
+    <!-- Add Button -->
     <Button
-        android:id="@+id/next_button"
+        android:id="@+id/add_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:text="@string/next_button_text"
+        android:text="Add Category"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         android:background="@drawable/button_rounded"
         app:backgroundTint="@color/main_green"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        android:layout_marginBottom="8dp" />
+
+    <!-- Cancel Button -->
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:background="@drawable/button_rounded"
+        app:backgroundTint="@color/grey"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
